--- a/config/samples/streaming_v1alpha1_srsclusternginx.yaml
+++ b/config/samples/streaming_v1alpha1_srsclusternginx.yaml
@@ -3,5 +3,5 @@ kind: SRSClusterNginx
 metadata:
   name: srsclusternginx-sample
 spec:
-  # Add fields here
-  foo: bar
+  size: 3
+  serviceName: rtmp
